# FastAPI

./: .env  .env.example  .gitignore  Notes.text  PERMIT_SETUP.md  Prompts.text  README.md  app.db  main.py  pyproject.toml  test.db
Basics/: 1.ifelse.py  2.loops.py  3.Class.py  4.oops.py  5.calculator.py  6.dunder.py
Basics/Assignment/: 1.cliParser.py  2.studentManagement.py  data.csv
app/: app.py  db.py  images.py  schemas.py  static-app.py  users.py
app/api/: dependencies.py  main.py
app/api/routers/: assets.py  organizations.py  posts.py  users.py  users_list.py
app/core/: config.py  db.py  permit_service.py
scripts/: debug_permit_check.py  setup_initial_org.py
